# amoro

./: .asf.yaml  .gitignore  .rat-excludes  .scalafmt.conf  AGENTS.md  COMMUNITY.md  CONTRIBUTING.md  DEPENDENCIES.md  DISCLAIMER  LICENSE  LICENSE-binary  Makefile  NOTICE  NOTICE-binary  README.md  build.sh  package.json  pom.xml
.github/: PULL_REQUEST_TEMPLATE  labeler.yml  release.yml
amoro-admin/: README.md  index.html  package.json  pom.xml  vite.config.ts
amoro-ams/: pom.xml
amoro-common/: pom.xml
amoro-core/: pom.xml
amoro-format-hudi/: pom.xml
amoro-format-iceberg/: pom.xml
amoro-format-lance/: pom.xml
amoro-format-mixed/: pom.xml
amoro-format-paimon/: pom.xml
amoro-hudi-format/: pom.xml
amoro-iceberg/: pom.xml
amoro-iceberg-format/: pom.xml
amoro-mcp-server/: README.md  pyproject.toml
amoro-mcp-server/src/amoro_mcp_server/: __init__.py  actions.py  auth.py  client.py  compatibility.py  config.py  logging_config.py  models.py  request_context.py  sanitize.py  server.py
amoro-mcp-server/src/amoro_mcp_server/tools/: __init__.py  check_ams_connectivity.py  common.py  get_table_details.py  list_catalogs.py  list_databases.py  list_optimizers.py  list_optimizing_processes.py  list_optimizing_tables.py  list_optimizing_tasks.py  list_resource_groups.py  list_table_snapshots.py  list_tables.py
amoro-mcp-server/tests/: conftest.py  test_actions.py  test_auth.py  test_client.py  test_compatibility.py  test_logging.py  test_sanitize.py  test_server.py
amoro-metrics/: pom.xml
amoro-mixed-format/: pom.xml
amoro-openapi-sdk/: pom.xml
amoro-optimizer/: pom.xml
amoro-paimon-format/: pom.xml
amoro-scheduler/: pom.xml
amoro-web/: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pom.xml  vite.config.ts
ams/: pom.xml
charts/: amoro-0.1.0.tgz  index.yaml
core/: pom.xml
dev/: dependencies.sh  reformat  (+1 more)
(+11536 files in other folders)
