# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[project]
name = "amoro-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for Apache Amoro"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "Apache-2.0"
dependencies = [
  "fastmcp==3.4.3",
  "httpx~=0.28.1",
  "pydantic-settings~=2.14.2",
  "tzdata~=2026.2",
  "uvicorn~=0.50.2",
]

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.0,<2",
  "respx>=0.22,<1",
  "ruff>=0.12,<1",
]

[project.scripts]
amoro-mcp-server = "amoro_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amoro_mcp_server"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
